@@ -2,6 +2,9 @@ The current version of Ruby Reports is 0.4.13
 
 changes since 0.4.11
 
+- Added high level hook Report#text_processor which essentially works like
+  Format.register_filter
+
 - Report can now run single or multiple reports and do things such as send them
   via email or write/append them to files.
 
